Fixed Leave Type Controller